--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -4,9 +4,11 @@
     "es2021": true,
     "node": true
   },
-  "plugins": ["react", "prettier", "react-hooks"],
+  "plugins": ["react", "@typescript-eslint", "react-hooks"],
   "extends": [
     "plugin:react/recommended",
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended",
     "prettier",
     "plugin:react-hooks/recommended"
   ],
@@ -15,20 +17,27 @@
       "version": "detect"
     }
   },
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": 12,
-    "sourceType": "module"
+    "sourceType": "module",
+    // "project": "tsconfig.json",
+    "createDefaultProgram": true
   },
-  "ignorePatterns": ["build/", "node_modules/"],
   "rules": {
-    "no-console": 1,
+    // "no-console": 2,
     "react/react-in-jsx-scope": "off",
-    "react-hooks/rules-of-hooks": "off",
-    "react-hooks/exhaustive-deps": "off"
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn",
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/no-explicit-any": "off"
   },
   "overrides": [
     {
-      "files": ["*.js", "*.jsx"]
+      "files": ["*.js", "*.jsx", "*.ts", "*.tsx"],
+      "rules": {
+        "@typescript-eslint/explicit-function-return-type": "off"
+      }
     }
   ]
 }
