--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,8 @@
     "gen": "ts-node generateData.ts"
   },
   "dependencies": {
+    "@types/cors": "^2.8.12",
+    "cors": "^2.8.5",
     "json-server": "^0.17.0",
     "json-server-auth": "^2.1.0"
   },
