--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -21,10 +21,11 @@
   },
   "ignorePatterns": ["build/", "node_modules/"],
   "rules": {
-    // "no-console": 1,
+    "no-console": 1,
     "react/react-in-jsx-scope": "off",
     "react-hooks/rules-of-hooks": "off",
-    "react-hooks/exhaustive-deps": "off"
+    "react-hooks/exhaustive-deps": "off",
+    "no-unused-vars": "error"
   },
   "overrides": [
     {
